--- a/frontend_react/package.json
+++ b/frontend_react/package.json
@@ -15,6 +15,7 @@
     "react-icons": "^4.3.1",
     "react-scripts": "5.0.0",
     "react-tooltip": "^4.2.21",
+    "resize-observer-polyfill": "^1.5.1",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
